deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-spring-boot-simple-app-service
spec:
  selector:
    app: simplespringbootproject  # it should match with deployment files app:
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090    # containers port
  type: LoadBalancer
